# fast-sqlalchemy

./: .gitignore  LICENCE  README.md  pyproject.toml  test_test_test.db
__boilerplate__/: settings.py
__boilerplate__/api/: main.py
__boilerplate__/config/test/: application.yaml
__template__/: settings.py
__template__/api/: main.py  routes.py
__template__/config/: application.yaml
fast_alchemy/: __init__.py
fast_alchemy/config/: yaml.py
fast_alchemy/event_bus/: __init__.py  bus.py  contexts.py  emit.py  middleware.py  middlewares.py
fast_alchemy/event_bus/tests/: test_event_bus.py
fast_alchemy/persistence/: context.py  database.py  middleware.py  middlewares.py  repository.py
fast_alchemy/testing/: __init__.py  client.py  db_client.py
fast_sqlalchemy/: __init__.py
fast_sqlalchemy/authentication/: dependencies.py  middlewares.py
fast_sqlalchemy/cli/: commands.py  entry_point.py
fast_sqlalchemy/cli/__template__/api/: main.py  routes.py
fast_sqlalchemy/cli/__template__/api/examples/: routes.py
fast_sqlalchemy/cli/__template__/config/prod/: application.yaml
fast_sqlalchemy/cli/boilerplate/api/: main.py
fast_sqlalchemy/cli/boilerplate/config/: application.yaml
fast_sqlalchemy/config/: exceptions.py  utils.py  yaml.py
fast_sqlalchemy/event_bus/: __init__.py  bus.py  contexts.py  emit.py  middlewares.py
fast_sqlalchemy/logging/: formatter.py  handlers.py  middlewares.py
fast_sqlalchemy/persistence/: database.py  exceptions.py  middlewares.py
fast_sqlalchemy/testing/: __init__.py  db_client.py
fast_sqlalchemy/translation/: pydantic.py
tests/: conftest.py  test_fast_alchemy.py
tests/authentication/: test_dependencies.py  test_middlewares.py
tests/cli/: test_new.py
tests/config/: env_test  test_yaml.py
tests/config/test_cfg_dir/: second.yaml  test_config.yaml
tests/config/test_cfg_dir/test/: override_config.yaml
tests/event_bus/: conftest.py  test_bus.py  test_emit.py  test_middleware.py
tests/logging/: test_db_handlers.py  test_middlewares.py
tests/persistence/: test_database.py  test_middleware.py  test_repository.py
tests/testing/: conftest.py  factories_stub.py  test_db_client.py
tests/testing/alembic/: env.py
tests/testing/alembic/versions/: 20f000d22591_.py
tests/translation/: test_pydantic.py
