[tool.poetry]
name = "fast-alchemy"
version = "0.5.3"
description = "Framework for Orthoresa"
authors = ["Clement_Hue <clementhue@hotmail.fr>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
fastapi = "^0.79.0"
SQLAlchemy = "^1.4.40"
factory-boy = "^3.2.1"
alembic = "^1.8.1"
python-dotenv = "^0.20.0"
PyJWT = "^2.4.0"
pyhumps = "^3.7.2"
html2text = "^2020.1.16"
Jinja2 = "^3.1.2"
SQLAlchemy-Utils = "^0.38.3"
confuse = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.8.2"
pytest-asyncio = "^0.19.0"
pysqlite3 = "^0.4.7"

[tool.pytest.ini_options]
addopts = "-s  --color=yes"

[tool.poetry.plugins]
pytest11 = { fast_alchemy = "fast_alchemy.testing.pytest" }

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
