[tool.poetry]
name = "fast-sqlalchemy"
version = "0.12.2"
description = "Make application with Fastapi and Sqlalchemy with ease"
authors = ["Clement_Hue <clementhue@hotmail.fr>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Chaisenbois/fast-alchemy"
classifiers = [
        "Environment :: Web Environment",
        "Framework :: AsyncIO",
        "Framework :: FastAPI",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: Implementation :: CPython",
        "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
        "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
fastapi = "^0.79.0"
SQLAlchemy = "^1.4.40"
factory-boy = "^3.2.1"
alembic = "^1.8.1"
python-dotenv = "^0.20.0"
PyJWT = "^2.4.0"
pyhumps = "^3.7.2"
html2text = "^2020.1.16"
Jinja2 = "^3.1.2"
SQLAlchemy-Utils = "^0.38.3"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.8.2"
pytest-asyncio = "^0.19.0"
pysqlite3 = "^0.4.7"

[tool.pytest.ini_options]
addopts = "-s  --color=yes"

[tool.poetry.plugins]
pytest11 = { fast_sqlalchemy = "fast_sqlalchemy.testing.pytest" }

[tool.poetry.scripts]
fast-sqla = 'fast_sqlalchemy.cli.entry_point:main'

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
